--- a/templates/landing/newsdetail.html
+++ b/templates/landing/newsdetail.html
@@ -45,7 +45,7 @@
                             </span>
                         </div>
                         <div class="newscontent">
-                            {{ news.content|markdown }}
+                            {{ news.content|markdown|safe }}
                         </div>
                     </div>
                 </div>
