--- a/templates/landing/hashtag.html
+++ b/templates/landing/hashtag.html
@@ -8,11 +8,19 @@
     <link rel="stylesheet" href="{% static "dist/css/bootstrap-image-gallery.min.css" %}" charset="utf-8">
 {% endblock %}
 {% block extrameta %}
+    {% if ogtag %}
+    <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+		<meta property="og:title" content="{{ ogtag.title }}" />
+		<meta property="og:description" content="{{ ogtag.description }}" />
+		<meta property="og:image" content="http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ ogtag.image.url }}" />
+		<meta property="fb:app_id" content="675793779103244">
+    {% else %}
     <meta property="og:url" content="https://ekata.social/hashtag/" />
     <meta property="og:title" content="Basic Income Hashtag Banner" />
     <meta property="og:description" content="Show support for basic income by adding a hashtag banner" />
     <meta property="og:image" content="https://ekata.social/static/dist/img/ekata-hashtag-banner-200-sq.png" />
     <meta property="fb:app_id" content="675793779103244">
+    {% endif %}
 {% endblock %}
 {% block content %}
 <section id="home">
