--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -4,11 +4,19 @@
 	Welcome
 {% endblock %}
 {% block extrameta %}
-    <meta property="og:url" content="https://ekata.social/" />
+		{% if ogtag %}
+		<meta property="og:url" content="{{ request.build_absolute_uri }}" />
+		<meta property="og:title" content="{{ ogtag.title }}" />
+		<meta property="og:description" content="{{ ogtag.description }}" />
+		<meta property="og:image" content="http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ ogtag.image.url }}" />
+		<meta property="fb:app_id" content="675793779103244">
+		{% else %}
+		<meta property="og:url" content="https://ekata.social/" />
     <meta property="og:title" content="Ekata Social" />
     <meta property="og:description" content="Ekata Social is a web platform designed for communities with a premise of social responsibility" />
     <meta property="og:image" content="https://ekata.social/static/dist/img/ekata-logo-bk-200.png" />
     <meta property="fb:app_id" content="675793779103244">
+		{% endif %}
 {% endblock %}
 {% block content %}
 <!-- start home -->
