--- a/templates/landing/newsdetail.html
+++ b/templates/landing/newsdetail.html
@@ -10,6 +10,15 @@
         }
     </style>
 {% endblock %}
+{% block extrameta %}
+    {% if ogtag %}
+    <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+		<meta property="og:title" content="{{ ogtag.title }}" />
+		<meta property="og:description" content="{{ ogtag.description }}" />
+		<meta property="og:image" content="http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ ogtag.image.url }}" />
+		<meta property="fb:app_id" content="675793779103244">
+    {% endif %}
+{% endblock %}
 {% block content %}
 <section id="newsdetail">
     <div class="container">
