--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -8,6 +8,7 @@
 			<meta property="og:url" content="{{ request.build_absolute_uri }}" />
 			<meta property="og:title" content="{{ ogtag.title }}" />
 			<meta property="og:description" content="{{ ogtag.description }}" />
+			<meta property="og:type" content="{{ ogtag.page_type }}">
 			{% if ogtag.image %}
 				<meta property="og:image" content="http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ ogtag.image.url }}" />
 			{% else %}
