--- a/templates/publicusers/userdetails.html
+++ b/templates/publicusers/userdetails.html
@@ -18,7 +18,7 @@
         }
         .visibilty:after {
 	        content: '';
-	        display: block;  
+	        display: block;
 	        position: absolute;
 	        right: 100%;
 	        top: 50%;
@@ -38,8 +38,8 @@
         }
     </style>
 {% endblock extrastyle %}
-    
-    
+
+
 {% block content_header %}
     <h1>
     {{ user.username }}
@@ -55,7 +55,7 @@
     <div class="row">
         {% include "publicusers/user.html" %}
     </div>
-    {% ifequal user.username request.user.username %} 
+    {% ifequal user.username request.user.username %}
     {% else %}
     {% if user.thumbs.all %}
     <div class="row">
@@ -71,16 +71,16 @@
                             <li>
                                 {% if thumb.from_user.profile.avatar_public %}
                                     {% if thumb.from_user.profile.avatar %}
-                                        <img src="{{ thumb.from_user.profile.avatar.thumbnail.128x128 }}" alt="User Image"> 
+                                        <img src="{{ thumb.from_user.profile.avatar.thumbnail.128x128 }}" alt="User Image">
                                     {% else %}
-                                        <img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128"  alt="User Image"> 
-                                    {% endif %} 
+                                        <img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128"  alt="User Image">
+                                    {% endif %}
                                 {% else %}
-                                    <img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128" alt="User Image"> 
+                                    <img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128" alt="User Image">
                                 {% endif %}
                                 <a class="users-list-name" href="{% url 'publicusers:user' thumb.from_user.id %}">{{ thumb.from_user.username }}</a>
                                 <span class="users-list-date">{{ thumb.from_user.profile.street }}</span>
-                            </li>        
+                            </li>
                         {% endif %}
                     {% endfor %}
                     </ul>
@@ -184,7 +184,7 @@
                         location.reload();
                     }
                 });
-            }    
+            }
         {% endif %}
         function clear_form_field_errors(form) {
             $(".error-msg", $(form)).remove();
@@ -219,7 +219,7 @@
                     $('.top-right').notify({
                         message: { text: data },
                         type: 'info'
-                    }).show(); 
+                    }).show();
                 },
             })
         })
@@ -373,7 +373,7 @@
                         height: '350px',
                         size: '3px',
                         alwaysVisible: false,
-                        start: 'bottom' 
+                        start: 'bottom'
                     });
                 }
             });
@@ -391,15 +391,14 @@
                         userstatus.empty();
                         userstatus.append('<i class="fa fa-circle onlinestatus"></i> {% trans "Offline" %}')
                         if (data.last_seen) {
-                            var date = new Date(data.last_seen).toLocaleString();
-                            var lastseen = moment(date).format('MMMM Do YYYY, hh:mm a')
+                            var lastseen = moment(data.last_seen).format('MMMM Do YYYY, hh:mm a')
                             $(userstatus).attr('data-toggle', 'tooltip');
                             $(userstatus).attr('title', '{% trans "lastseen: " %}' + lastseen);
                         }
                     }
                 },
                 complete: function() {
-                    setTimeout(getOnline, 15000);   
+                    setTimeout(getOnline, 15000);
                 }
             });
         })();
