--- a/templates/base.html
+++ b/templates/base.html
@@ -390,12 +390,12 @@
         <!-- /.content-wrapper -->
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
+                <small class="label bg-blue">Ekata</small>
                 <b><small class="label {{ VERSION_COLOR }}">{{ VERSION_NAME }}</small> v{{ VERSION_NUMBER }} </b>
             </div>
             <strong>Copyright &copy; 2014-2016 <a href="/">Ekata</a>.</strong> All rights
             reserved.
-            <small class="label bg-blue">Powered by Ekata</small>
-            <small class="label bg-green">and Django 1.9.7</small>
+            <small class="label bg-green"><a href="https://www.djangoproject.com/" target='_blank' style="color: #fff;">Powered by Django</a></small>
         </footer>
 
         <!-- Control Sidebar -->
