--- a/templates/profilesystem/pinfo.html
+++ b/templates/profilesystem/pinfo.html
@@ -37,7 +37,7 @@
 <hr>
 <strong><i class="fa fa-users margin-r-5"></i>{% trans "Community" %}</strong>
 
-<p class="text-muted"><img src="{% static "dist/img/brand-logo.png" %}" width="15" height="15" alt="Community Logo">&nbsp;&nbsp;None <i class="fa fa-lock" style="margin-left: 70%; color: #dd4b39;"></i></p>
+<p class="text-muted"><img src="{% static "dist/img/brand-logo.png" %}" width="15" height="15" alt="Community Logo">&nbsp;&nbsp;None <i class="fa fa-lock text-red" style="margin-left: 70%;"></i></p>
 <hr>
 <strong><i class="fa fa-globe margin-r-5"></i>{% trans "Website" %}</strong>
 
