--- a/templates/base.html
+++ b/templates/base.html
@@ -127,10 +127,7 @@
                         </li>
                          <!--Notifications: style can be found in dropdown.less-->
                         <li class="dropdown notifications-menu"  id="notification">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-bell-o"></i>
-                                <span class="label bg-red" id="notindicator"></span>
-                            </a>
+
                         </li>
                          <!--Tasks: style can be found in dropdown.less
                         <li class="dropdown tasks-menu">
@@ -866,6 +863,28 @@
                     else{
                         $("#notindicator").text(count - 1);
                     }
+                }
+            });
+        });
+        $(document).on('click', '.notification-control', function(){
+            $.ajax({
+                url: '{% url 'notification:setallread' %}',
+                type: 'POST',
+                success: function (data) {
+                    $("#notification").empty();
+                    $("#notification").append(data.html_s);
+                    if (data.unread) {
+                        $("#notindicator").text(data.unread);
+                        $("#notindicator").show();
+                    }
+                    else {
+                        $("#notindicator").hide();
+                    }
+                    $(".menu").slimscroll({
+                        height: '200px',
+                        size: '3px',
+                        alwaysVisible: false
+                    });
                 }
             });
         });
