--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -1,6 +1,15 @@
 {% load i18n %}
+<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+    <i class="fa fa-bell-o"></i>
+    <span class="label bg-red" id="notindicator"></span>
+</a>
 {% if notifications %}
 <ul class="dropdown-menu">
+    <li class="notification-control">
+        <a href="javascript:void(0)">
+            <i class="fa fa-eye text-red"></i> Mark all as read
+        </a>
+    </li>
     <li>
         <ul class="menu">
     {% for notification in notifications %}
@@ -111,14 +120,13 @@
 </ul>
 {% else %}
     <ul class="dropdown-menu">
-        <li>
-            <ul class="menu">
-                <li>
-                    <a href="#">
-                        <i class="fa fa-smile-o text-red"></i> {% trans "All caught up" %}
-                    </a>
-                </li>
-            </ul>
+        <li class="nonotification">
+            <div class="nonotification-icon">
+                <i class="fa fa-thumbs-up text-green"></i>
+            </div>
+            <div class="nonotification-text">
+                {% trans "All caught up!!" %}
+            </div>
         </li>
     </ul>
 {% endif %}
