--- a/templates/groupsystem/admindashboard.html
+++ b/templates/groupsystem/admindashboard.html
@@ -33,7 +33,7 @@
         <div class="col-md-3">
             <div class="small-box bg-orange">
                 <div class="inner">
-                    <h3>{{ group.joinrequest.all.count }}</h3>
+                    <h3>{{ joinrequests }}</h3>
                     <p>{% trans "New Request" %}</p>
                 </div>
                 <div class="icon">
